--- a/src/app/product/product.component.scss
+++ b/src/app/product/product.component.scss
@@ -9,7 +9,7 @@
             }
             .list {
                 li {
-                    border-bottom: 1px solid crimson;
+                    border-bottom: 1px solid rgb(121, 113, 114);
                     margin-bottom: 10px;
                     a {
                         text-decoration: none;
