--- a/src/app/product-sale/product-sale-list/product-sale-list.component.html
+++ b/src/app/product-sale/product-sale-list/product-sale-list.component.html
@@ -1,17 +1,16 @@
-<div class="right-product-box">
+<div class="right-product-box" style="margin-top: 10px">
     <div class="product-item-filter row">
         <div class="col-12 col-sm-12 text-center text-sm-left">
             <div class="toolbar-sorter-right">
-                <span>Sort by </span>
                 <select id="basic" class="selectpicker show-tick form-control" data-placeholder="$ USD">
-                <option data-display="Select">Nothing</option>
-                <option value="1">Popularity</option>
-                <option value="2">High Price → High Price</option>
-                <option value="3">Low Price → High Price</option>
-                <option value="4">Best Selling</option>
-            </select>
+                    <option data-display="Select">Short By</option>
+                    <option value="1">Popularity</option>
+                    <option value="2">High Price → High Price</option>
+                    <option value="3">Low Price → High Price</option>
+                    <option value="4">Best Selling</option>
+                 </select>
             </div>
-            <p>Showing all 4 results</p>
+            <p>Tổng cộng có {{allSaleProducts.length}} sản phẩm</p>
         </div>
     </div>
 
@@ -36,7 +35,11 @@
                             </div>
                             <div class="why-text">
                                 <h4>{{saleProduct.name}}</h4>
-                                <h5>{{saleProduct.priceToBuy}}</h5>
+                                <h5>SKU: {{saleProduct.SKU}}</h5>
+                                <div class="price-box">
+                                    <span class="priceToBuy">{{saleProduct.priceToBuy | currency: "VND"}}</span>
+                                    <span class="basePrice">{{saleProduct.basePrice | currency: "VND"}}</span>
+                                </div>
                             </div>
                         </div>
                     </div>
