--- a/src/app/product-sale/sidebar/sidebar.component.html
+++ b/src/app/product-sale/sidebar/sidebar.component.html
@@ -12,6 +12,9 @@
         <div class="list-group list-group-collapse list-group-sm list-group-tree" id="list-group-men" data-children=".sub-men">
             <div class="list-group-collapse sub-men">
             <a class="list-group-item list-group-item-action">Sản phẩm</a>
+            <a class="list-group-item list-group-item-action">Sản phẩm khuyến mãi</a>
+            <a class="list-group-item list-group-item-action">Sản phẩm mới</a>
+            <a class="list-group-item list-group-item-action">Các thương hiệu</a>
                 <!-- <div class="collapse show" id="sub-men1" data-parent="#list-group-men">
                     <div class="list-group">
                         <a href="#" class="list-group-item list-group-item-action active">T-Shirts <small class="text-muted">(50)</small></a>
@@ -40,12 +43,36 @@
         <div class="title-left">
             <h3>Thương hiệu</h3>
         </div>
+       
+        <div class="form-check" *ngFor="let age of ages">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault" style="font-weight: normal;">
+              {{age.value}}
+            </label>
+          </div>
+    </div>
+    <div class="filter-brand-left">
+        <div class="title-left">
+            <h3>Thương hiệu</h3>
+        </div>
+       
+        <div class="form-check" *ngFor="let sex of sexs">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+            <label class="form-check-label" for="flexRadioDefault1" style="font-weight: normal;">
+              {{sex}}
+            </label>
+        </div>
+    </div>
+
+    <div class="filter-brand-left">
+        <div class="title-left">
+            <h3>Thương hiệu</h3>
+        </div>
         <div class="brand-box">
             <ul>
                 <li>
-                    <div class="radio radio-danger">
-                        <input name="survey" id="Radios1" value="Yes" type="radio">
-                        <label for="Radios1"> Brand 1 </label>
+                    <div class="radio radio-danger" *ngFor="let brand of brands">
+                        <label class="Radio1">{{brand.name}}</label>
                     </div>
                 </li>
             </ul>
