--- a/src/app/product-sale/sidebar/sidebar.component.html
+++ b/src/app/product-sale/sidebar/sidebar.component.html
@@ -45,7 +45,7 @@
         </div>
     
         <div class="form-check" *ngFor="let age of ages">
-            <input #checkAge class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (click) = "clickAge(age.id)">
+            <input #checkAge class="form-check-input" type="checkbox" value="" id="flexCheckDefault" (click) = "clickAge(age)" (checked)=true>
             <label #check class="form-check-label" for="flexCheckDefault" style="font-weight: normal;">
                 {{age.value}}
             </label>
@@ -55,9 +55,8 @@
         <div class="title-left">
             <h3>Giới tính</h3>
         </div>
-       
         <div class="form-check" *ngFor="let sex of sexs">
-            <input #checkSex class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" (click) = "clickSex(sex.id)">
+            <input #checkSex class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" (change) = "clickSex(sex)">
             <label class="form-check-label" for="flexRadioDefault1" style="font-weight: normal;">
               {{sex.value}}
             </label>
@@ -69,13 +68,12 @@
             <h3>Thương hiệu</h3>
         </div>
         <div class="brand-box">
-            <ul>
-                <li>
-                    <div class="radio radio-danger" *ngFor="let brand of brands" (click) = "clickBrand(brand.id)">
-                        <label class="Radio1" >{{brand.name}}</label>
-                    </div>
-                </li>
-            </ul>
+            <div class="form-check" *ngFor="let brand of brands">
+                <input #checkSex class="form-check-input" type="radio" name="flexRadioDefault2" id="flexRadioDefault1" (click) = "clickBrand(brand)">
+                <label class="form-check-label" for="flexRadioDefault1" style="font-weight: normal;">
+                  {{brand.name}}
+                </label>
+            </div>
         </div>
     </div>
 
