--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,15 +1,14 @@
 <!-- Footer -->
 <footer class="bg-dark text-center text-white">
   <!-- Grid container -->
-  <div class="container-fluid p-4">
+  <div class="container-fluid p-4 pt-2">
     <!-- Section: Social media -->
     <section class="mb-4">
       <!-- Facebook -->
-      <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-facebook-f"></i
-      ></a> -->
+      ></a>
 
-   
       <!-- Twitter -->
       <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
         ><i class="fab fa-twitter"></i
@@ -63,7 +62,7 @@
           <!--Grid column-->
           <div class="col-auto">
             <!-- Submit button -->
-            <button type="submit" class="btn btn-outline-light mb-4 button-size">
+            <button type="submit" class="btn btn-outline-light mb-4">
               Subscribe
             </button>
           </div>
@@ -77,7 +76,8 @@
     <!-- Section: Text -->
     <section class="mb-4">
       <p>
-        The place to create products with top quality in the world .
+        
+        
       </p>
     </section>
     <!-- Section: Text -->
@@ -86,70 +86,8 @@
     <section class="">
       <!--Grid row-->
       <div class="row">
-
- <!--Grid column-->
- <div class="col-lg-4 col-md-4 mb-4 mb-md-0">
-  <h5 class="text-uppercase">SẢN PHẨM</h5>
-
-  <ul class="list-unstyled mb-0">
-    <li>
-      <a href="#!" class="text-white">Logo xếp hình</a>
-    </li>
-    <li>
-      <a href="#!" class="text-white">Mô hình ,nhân vật</a>
-    </li>
-    <li>
-      <a href="#!" class="text-white">Điều khiển từ xa</a>
-    </li>
-    <li>
-      <a href="#!" class="text-white">Phụ kiện, đồ dùng</a>
-    </li>
-  </ul>
-</div>
-<!--Grid column-->
-
         <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">ĐỘ TUỔI</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-white">Dưới 3 tuổi</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Từ 3 đến 12 tuổi</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Trên 12 tuổi</a>
-            </li>
-           
-          </ul>
-        </div>
-        <!--Grid column-->
-
-       
-
-        <!--Grid column-->
-        <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">GIỚI TÍNH</h5>
-
-          <ul class="list-unstyled mb-0">
-            <li>
-              <a href="#!" class="text-white">Bé trai</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Bé gái</a>
-            </li>
-            <li>
-              <a href="#!" class="text-white">Unisex</a>
-            </li>
-            
-          </ul>
-        </div>
-        <!--Grid column-->
-
-        <!--Grid column-->
-        <!-- <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
           <h5 class="text-uppercase">Links</h5>
 
           <ul class="list-unstyled mb-0">
@@ -166,7 +104,70 @@
               <a href="#!" class="text-white">Link 4</a>
             </li>
           </ul>
-        </div> -->
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">Links</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Link 1</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 2</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 3</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 4</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">Links</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Link 1</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 2</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 3</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 4</a>
+            </li>
+          </ul>
+        </div>
+        <!--Grid column-->
+
+        <!--Grid column-->
+        <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+          <h5 class="text-uppercase">Links</h5>
+
+          <ul class="list-unstyled mb-0">
+            <li>
+              <a href="#!" class="text-white">Link 1</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 2</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 3</a>
+            </li>
+            <li>
+              <a href="#!" class="text-white">Link 4</a>
+            </li>
+          </ul>
+        </div>
         <!--Grid column-->
       </div>
       <!--Grid row-->
@@ -176,9 +177,9 @@
   <!-- Grid container -->
 
   <!-- Copyright -->
-  <div class="text-center p-3" style="background-color: rgba(10, 9, 9, 0.836);">
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2020 Copyright:
-    <a class="text-white" href="https://mdbootstrap.com/">CTS Company</a>
+    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
   </div>
   <!-- Copyright -->
 </footer>
