--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,13 +1,16 @@
 footer{
     margin-top: 20px;
-    height: 300px;
+   height: 100%;
     font-size: 20px;
     .p-4{
+        
         background-color: rgb(65, 59, 55);
     }
+   
     .button-size{
         height: 30px;
     }
+
     a{
         text-decoration: none;
         font-weight: 200px;
@@ -15,4 +18,8 @@ footer{
     .text-uppercase{
         text-decoration:underline;
     }
+    button::after{
+        content: "";
+    }
+
 }
