--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,260 +1,37 @@
+<app-title-box></app-title-box>
 
-<section id="mainProduct" class="main-product">
-    <div class="row">
-        <div class="sidebar col-lg-3 col-md-3 col-sm-12 col-xs-12">
-            <div class="sidebar-category">
+<div class="shop-box-inner">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-3 col-lg-3 col-sm-12 col-xs-12 sidebar-shop-left">
+                <app-sidebar
+                (onClickAge) = "clickAge($event)"
+                (onClickSex) = "clickSex($event)"
+                (onClickBrand) = "clickBrand($event)"
+                (onClickSearch) = "clickSearch($event)"
+                >
 
-                <h3 class="category-title">DANH MỤC</h3>
-                <ul class="list">
-                    <li class="level"><a href="" title="Lego xếp hình">Lego xếp hình</a></li>
-                    <li class="level"><a href="" title="Điều khiển từ xa">Điều khiển từ xa</a></li>
-                    <li class="level"><a href="" title="Mô hình, nhân vật">Mô hình, nhân vật</a></li>
-                    <li class="level"><a href="" title="Phụ kiện, đồ dùng">Phụ kiện, đồ dùng</a></li>
-                </ul>
+                </app-sidebar>
             </div>
+            <div class="col-xl-9 col-lg-9 col-sm-12 col-xs-12 shop-content-right">
+                <app-product-sale-list  
+                [allSaleProducts] = "allSaleProducts"
+                [saleProducts] = "saleProducts"
+                [pagination] = "pagination"
+                [sorters] = "sorters"
+                [sortCheck] = "sortCheck"
+                [visiblePagesNumber] = "visiblePagesNumber"
+                (onChanged) = "changed($event)"
+                (onFirstPage) = "firstPage()"
+                (onLastPage) = "lastPage()"
+                (onPreviousPage) = "previousPage()"
+                (onNextPage) = "nextPage()"
+                (onIndexPaginationChange) = "indexPaginationChange($event)"
+                >
 
-            <div class="sidebar-category">
-                <h3 class="category-title">ĐỘ TUỔI</h3>
-                <ul class="list">
-                    <li class="level"><a href="" title="Bé hơn 3 tuổi">Bé hơn 3 tuổi</a></li>
-                    <li class="level"><a href="" title="Từ 3 đến 12 tuổi">Từ 3 đến 12 tuổi</a></li>
-                    <li class="level"><a href="" title="Lớn hơn 12 tuổi">Lớn hơn 12 tuổi</a></li>
-                </ul>
-            </div>
-
-            <div class="sidebar-category">
-                <h3 class="category-title">GIỚI TÍNH</h3>
-                <ul class="list">
-                    <li class="level"><a href="" title="Bé nam">Bé nam</a></li>
-                    <li class="level"><a href="" title="Bé nữ">Bé nữ</a></li>
-                    <li class="level"><a href="" title="Unisex">Unisex</a></li>
-                </ul>
-            </div>
-
-            <div class="sidebar-category">
-                <h3 class="category-title">THƯƠNG HIỆU</h3>
-                <ul class="list">
-                    <li class="level"><a href="" title="LEGO">LEGO</a></li>
-                    <li class="level"><a href="" title="VECTO">VECTO</a></li>
-                    <li class="level"><a href="" title="BABY ALIVE">BABY ALIVE</a></li>
-                    <li class="level"><a href="" title="BRUDER">BRUDER</a></li>
-                </ul>
-            </div>
-
-        </div>
-        <div class="product col-lg-9 col-md-9 col-sm-12 col-xs-12">
-            <div class="product-grid ">
-                <ol class="product-list col-lg-12">
-
-                    <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                       <div class="product-info">
-                           <div class="product-info-img">
-                               <a href="" class="img">
-                                   <img src="../121271324_467898044172085_8593762770720055186_n.jpg" alt="">
-                               </a>
-                           </div>
-                           <div class="product-info-details">
-                               <h5 class="product-name">
-                                   <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                               </h5>
-                               <div class="product-price">100.000 vnd</div>
-                               <div class="product-available">con hang</div>
-                           </div>
-                       </div>
-                    </li>
-
-                    <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                     <li class="product-items col-lg-4 col-md-4 col-sm-4 col-xs-6 " >
-                        <div class="product-info">
-                            <div class="product-info-img">
-                                <a href="" class="img">
-                                    <img src="../grw38_1_.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="product-info-details">
-                                <h5 class="product-name">
-                                    <a href="" class="title">Lego xep hinh cho be trai va be gai</a>
-                                </h5>
-                                <div class="product-price">100.000 vnd</div>
-                                <div class="product-available">con hang</div>
-                            </div>
-                        </div>
-                     </li>
-
-                   
-
-                </ol>
+                </app-product-sale-list>
             </div>
         </div>
     </div>
-</section>
+</div>
 
