--- a/src/app/detail-product/detail-product.component.html
+++ b/src/app/detail-product/detail-product.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="card">
     <div class="container-fliud">
       <div class="wrapper row">
@@ -17,8 +17,8 @@
             <li><a data-target="#pic-4" data-toggle="tab"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/95cb36d3254e0a20b33361b06e7c0ce9/i/m/img_6182_1.jpg" /></a></li>
             <li><a data-target="#pic-5" data-toggle="tab"><img src="https://u6wdnj9wggobj.vcdn.cloud/media/catalog/product/cache/95cb36d3254e0a20b33361b06e7c0ce9/i/m/img_6178_1.jpg" /></a></li>
           </ul>
-          
         </div>
+        
         <div class="details col-md-6">
           <h3 class="product-title">siêu xe lamborghini</h3>
           <div class="rating">
