--- a/src/app/detail-product/detail-product.component.scss
+++ b/src/app/detail-product/detail-product.component.scss
@@ -65,7 +65,7 @@ img {
 
 .card {
     margin-top: 50px;
-    background: #eee;
+    // background: rgb(255, 255, 255);
     padding: 3em;
     line-height: 1.5em;
 }
