--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="account">
                         <div class="account-center">
-                           <a href="/login"> <i class="fas fa-user-circle"></i></a>
+                            <a href="/login"> <i class="fas fa-user-circle"></i> Đăng nhập</a>
                         </div>
                     </div>
                 </div>
